# office_automation_framework

./: README.md  cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: exporter.py  processor.py
examples/: daily_financial_report.py
files/: manager.py
mail/: sender.py
oaf/: cli.py  config.py  logging.py
oaf/ data/: exporter.py  processor.py
oaf/cli/: main.py
oaf/data/: loader.py  processor.py
oaf/mail/: sender.py
oaf/reports/: html.py  pdf.py
oaf/reports/templates/: financial_report_template.html
oaf/scheduler/: scheduler.py
oaf/security/: access.py
reports/: html.py  pdf.py
tests/: test_processor.py
