[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "office-automation-framework"
version = "1.0.0"
description = "Framework for office automation: reports, files, email, scheduling"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
oaf = "oaf.cli.main:main"

dependencies = [
    "pandas",
    "openpyxl",
    "jinja2",
    "weasyprint",
    "schedule"
]
