[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "office-automation-framework"
version = "0.1.0"
description = "Python framework for office automation"
authors = [{ name = "Mscbuild" }]
dependencies = [
  "pandas",
  "jinja2",
  "schedule",
  "pytest"
]

[project.scripts]
oaf = "oaf.cli:main"

