[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "office-automation-framework"
version = "1.0.0"
description = "Framework for office automation: reports, files, email, scheduling"
authors = [{name = "Mscbuild"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "openpyxl",
    "jinja2",
    "weasyprint",
    "schedule"
]

[project.scripts]
oaf = "oaf.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oaf*"]

